<resources>
    <string name="app_name">PocketCoPro</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_or_register">Login/Register</string>
    <string name="login_or_register_hint">Login by existing account or register automatically</string>
    <string name="confirm">Confirm</string>
    <string name="username_invalid">Username must only contains letters, digits and dashes</string>
    <string name="password_invalid">Password must contains both letters and digits, at least 8 characters</string>
    <string name="network_error">Network Error</string>
    <string name="loading">Loading</string>
    <string name="search">Search</string>
    <string name="explore">Explore</string>
    <string name="order">Order</string>
    <string name="permission_miss">Miss necessary permissions</string>
    <string name="exit_message">Application is going to exit</string>
    <string name="setting">Setting</string>
    <string name="account">Account</string>
    <string name="account_avatar">Account Avatar</string>
    <string name="total_cost">Total Cost</string>
    <string name="commodity_icon">Commodity Icon</string>
    <string name="detail">Detail</string>
    <string name="location_fail_title">Location Fail</string>
    <string name="location_fail_message">Check the permissions or whether you turn location on</string>
    <string name="refresh">Refresh</string>
    <string name="placing_order">Placing Order</string>
    <string name="order_status">Order Status</string>
    <string name="order_history">Order History</string>
    <string name="navigate_to">Navigate To</string>
    <string name="place_order">Place Order</string>
    <string name="ar" translatable="false">AR</string>
    <string name="discover">Discover</string>
    <string name="filter">Filter</string>
    <string name="close">Close</string>
    <string name="nearby">Nearby</string>
    <string name="open_navigation_drawer">Open Navigation Drawer</string>
    <string name="close_navigation_drawer">Close Navigation Drawer</string>
    <string name="user">User</string>
    <string name="preparing">Not Ready Now</string>
    <string name="share">Share</string>
    <string name="outlet">Outlet</string>
    <string name="delivery">Delivery</string>
    <string name="user_icon">User Icon</string>
    <string name="order_id">Order ID</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_order">Are you sure to place the order?</string>
    <string name="help">Help</string>
    <string name="scan">Scan</string>
    <string name="rent_mode">Rent Mode</string>
    <string name="billing_mode">Billing Mode</string>
    <string name="nickname">Nickname</string>
    <string name="address">Address\\</string>
    <string name="phone">Phone</string>
    <string name="detect">Detect</string>
    <string name="confirm_detail">Are you sure to enter the detail page?</string>
    <string name="device_detail">detail page</string>
</resources>