<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="order"
            type="com.memoryleak.pocketcopro.data.Order" />

        <variable
            name="formatter"
            type="java.time.format.DateTimeFormatter" />

    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresher"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionGroup="true">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small"
                    android:clickable="false"
                    android:focusable="false"
                    android:foreground="?attr/selectableItemBackground"
                    android:padding="@dimen/small"
                    app:cardCornerRadius="@dimen/small"
                    app:cardElevation="@dimen/small"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/middle">

                            <ImageView
                                android:id="@+id/icon"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:adjustViewBounds="true"
                                android:contentDescription="@string/commodity_icon"
                                android:scaleType="fitCenter"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="@id/guideline"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <androidx.constraintlayout.widget.Guideline
                                android:id="@+id/guideline"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                app:layout_constraintGuide_percent="0.25" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/middle"
                                android:singleLine="true"
                                android:text="@{order.commodityName}"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@id/cost"
                                app:layout_constraintHorizontal_bias="0.0"
                                app:layout_constraintStart_toEndOf="@id/guideline"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/cost"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:text='@{"￥"+order.totalCost}'
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                android:textColor="@color/primary"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <LinearLayout
                            android:id="@+id/actions"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/tiny"
                            android:gravity="end"
                            android:orientation="horizontal" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_toStartOf="@id/order_id"
                        android:text="@string/order_id" />

                    <TextView
                        android:id="@+id/order_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@{order.orderId}"
                        android:textIsSelectable="true" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_toStartOf="@id/rent_mode"
                        android:text="@string/rent_mode" />

                    <TextView
                        android:id="@+id/rent_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@{order.modeName}" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/small">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_toStartOf="@id/billing_mode"
                        android:text="@string/billing_mode" />

                    <TextView
                        android:id="@+id/billing_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:text="@{order.billingModeName}" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small"
                    android:layout_marginTop="@dimen/small"
                    android:layout_marginEnd="@dimen/small"
                    android:text="@string/order_status" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/large"
                    android:layout_marginTop="@dimen/small"
                    android:layout_marginEnd="@dimen/small"
                    android:layout_marginBottom="@dimen/small">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@id/update_time"
                        android:singleLine="true"
                        android:text="@{order.status}" />

                    <TextView
                        android:id="@+id/update_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:singleLine="true"
                        android:text="@{order.updateTime==null?``:formatter.format(order.updateTime)}" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small"
                    android:layout_marginTop="@dimen/small"
                    android:layout_marginEnd="@dimen/small"
                    android:text="@string/order_history" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/events"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="true"
                    android:overScrollMode="never" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>